--- a/src/components/Menu/MenuItem/menuItem.module.scss
+++ b/src/components/Menu/MenuItem/menuItem.module.scss
@@ -85,6 +85,12 @@
         display: flex;
         align-content: flex-start;
     }
+
+    /** Hides the browser default keyboard focus-visible styles
+        use the ConfigProvider instead */
+    &:focus-visible {
+        outline: none;
+    }
 }
 
 :global(.focus-visible) {
