--- a/src/components/Tabs/tabs.module.scss
+++ b/src/components/Tabs/tabs.module.scss
@@ -73,6 +73,12 @@
         .icon + .label:not(:empty) {
             margin-left: $space-xs;
         }
+
+        /** Hides the browser default keyboard focus-visible styles
+            use the ConfigProvider instead */
+        &:focus-visible {
+            outline: none;
+        }
     }
 
     &.small {
@@ -109,6 +115,17 @@
             }
             .tab-indicator {
                 display: none;
+            }
+        }
+    }
+}
+
+:global(.focus-visible) {
+    .tab-wrap {
+        .tab {
+            &.focus-visible,
+            &:focus-visible {
+                box-shadow: $focus-visible-box-shadow;
             }
         }
     }
